# NanoporeAnalysis

./: .pre-commit-config.yaml  CLAUDE.md  README.md  Reads_to_Proteins.py  analysis.py  basecall.py  debarcode.py  environment.yml  local_io.py  map_count.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
NanoporeAnalysis/: Analysis.py  align.py  gff2bed.py  local_io.py  pod5.py  pyarrow_edlib_analysis.py  reference_data.py  utils.py
tests/: test_reference_data.py  test_utils.py
transcriptome_nf/: Dockerfile  combined.pqt  environment.yml  main.nf  nextflow.config
transcriptome_nf/scripts/: batch_sam.py  extract_proteins.py  merge_parquets.py  primers.txt  process_sam.py
